--- a/src/app/components/nurse/nurse.component.html
+++ b/src/app/components/nurse/nurse.component.html
@@ -88,7 +88,7 @@
                   <!-- <td>{{patient.dob}}</td> -->
                   <td>
                       <ul>
-                          <li  *ngFor = "let allergy of patient.allergies">
+                          <li  *ngFor = "let allergy of patient.patientAllergies">
                               {{allergy.allergy}}
                           </li>
                       </ul>
@@ -97,7 +97,7 @@
                   <td>{{patient.weight}}</td>
                   <td>
                       <ul>
-                          <li  *ngFor = "let vax of patient.vaccinations">
+                          <li  *ngFor = "let vax of patient.patientVaccinations">
                               {{vax.vaccination}}
                           </li>
                       </ul>
